refactoed analysis.py, added some prompts

--- a/.copilot-instructions.md
+++ b/.copilot-instructions.md
@@ -8,33 +8,29 @@ When I ask you to review, analyze, or summarize a script, please follow the comp
 - "Analyze script.py" - Apply the full framework to the specified file
 - "Summarize this code" - Apply the full framework
 
-## Framework Location
+# Example Createion Instructions
 
-The complete review framework is stored in: `./prompts/script-review-prompt.xml`
+When asked to create executable files, please ensure they adhere to the best practices outlined in `/prompts/example-creation-prompt.xml`.
 
-Please read and follow all sections in order, providing a complete markdown document as output.
+# Usage Examples
 
-## Output Format
+- "write a markdown file that explains how the selected script works"
 
-Generate a comprehensive markdown review document following all sections defined in the XML framework, including:
-1. High-level summary
-2. Statistics
-3. Quality metrics
-4. Dependencies
-5. Architecture analysis
-6. Performance analysis
-7. Security assessment
-8. Flow diagram
-9. Maintainability indicators
-10. Detailed component descriptions
-11. Executive summary with recommendations
-```
+# Script creation instructions
 
-**Suggested folder structure:**
-```
-project/
-├── .copilot-instructions.md
-├── prompts/
-│   └── script-review-prompt.xml
-└── scripts/
-    └── your-script.py
+When asked to create scripts, please ensure they adhere to the best practices outlined in `/prompts/script-creation-prompt.xml`.
+
+# Usage Examples
+- "write a python script that analyzes text files for sentiment"
+- "create a bash script that automates backups of a specified directory"
+
+# archetectue creation instructions
+
+When asked to create architecture diagrams or descriptions, please ensure they adhere to the best practices outlined in `/prompts/architecture-creation-prompt.xml`.
+use the `script-creation-prompt.xml` for details on how to make the scripts themselves.
+
+# Usage Examples
+
+- "design a microservice architecture for an e-commerce platform"
+- "build a system besed off the wiki provided."
+- "refactor the current script"
